# circuitsim_old

./: CMakeLists.txt  LICENSE  build.gradle
CircuitSimAndroid/: README.md
CircuitSimAndroid/app/: build.gradle
CircuitSimAndroid/app/src/main/: AndroidManifest.xml
CircuitSimAndroid/app/src/main/java/com/rotiv/circuitsim/: CircuitSimLib.java  Main.java
CircuitSimAndroid/app/src/main/jni/: circuitsim  circuitsim-jni.cpp
CircuitSimAndroid/app/src/main/res/values/: strings.xml
CircuitSimVS/: CircuitSim.sln
CircuitSimVS/CircuitSim/: CircuitSim.vcxitems  CircuitSim.vcxitems.filters
CircuitSimVS/CircuitSim.Android/: CircuitSim.Android.vcxproj
CircuitSimVS/CircuitSim.UW/: CircuitSim.UW.vcxproj
CircuitSimVS/CircuitSimWin32/: CircuitSimWin32.vcxproj  CircuitSimWin32.vcxproj.filters  ReadMe.txt
circuitsim/: CMakeLists.txt  build.gradle  config.h.in  simulation.cpp  simulation.h
circuitsim/include/: circuitsim++.h  circuitsim.h
circuitsim/include/circuitsim/: simulation.h  utils.h
circuitsim/src/: circuitsim.cpp  component.cpp  component.h  current_source.cpp  current_source.h  matrix.cpp  matrix.h  parser.cpp  parser.h  resistor.cpp  resistor.h  simulation.cpp  simulation.h  token.cpp  token.h  utils.h  voltage_source.cpp  voltage_source.h
include/: circuitsim.h
testeapp/: CMakeLists.txt
testeapp/src/: main.cpp
